# keycloak-auth-library

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.cfg
core/: __init__.py  client.py  config.py  exceptions.py  security.py
fastapi/: dependencies.py
keycloak_auth/core/: config.py  security.py
keycloak_auth/core/db/: manager.py  queries.sql
keycloak_auth/fastapi_integration/: __init__.py  dependencies.py
keycloak_auth/flask_integration/: __init__.py  decorators.py
