[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-auth-lib"
version = "0.1.0"
dependencies = [
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=1.9.0",
    "requests>=2.28.0",
    "flask>=2.0.0",
    "fastapi>=0.75.0",
    "aiosql>=9.0",
    "sqlite3>=3.35"
]